--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,9 @@ jdk:
   - oraclejdk8
 
 
-install: ant deps
+sudo: false
 
-script:
-  - docker run -it -v $(pwd):/root/sources -w /root/sources maven:3.3.3-jdk-8 mvn clean install
+script: mvn clean verify
 
 notifications:
   email:
