--- a/pom.xml
+++ b/pom.xml
@@ -97,4 +97,16 @@
 		</dependency>
 
 	</dependencies>
+
+	<plugin>
+		<groupId>org.apache.maven.plugins</groupId>
+		<artifactId>maven-surefire-plugin</artifactId>
+		<version>2.18.1</version>
+		<configuration>
+			<excludes>
+				<exclude>**/DescriptionTest.java</exclude>
+			</excludes>
+		</configuration>
+	</plugin>
+
 </project>
