--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,6 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-
 	<groupId>br.edu.ifpb</groupId>
 	<artifactId>analyzerQuestions</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
@@ -42,20 +41,12 @@
 
 	<dependencies>
 
+
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>4.12</version>
-		</dependency>
-		<dependency>
-			<groupId>org.hamcrest</groupId>
-			<artifactId>hamcrest-all</artifactId>
-			<version>1.3</version>
-		</dependency>
-		<dependency>
-			<groupId>org.mockito</groupId>
-			<artifactId>mockito-core</artifactId>
-			<version>1.10.19</version>
+			<version>3.8.1</version>
+			<scope>test</scope>
 		</dependency>
 
 		<dependency>
@@ -130,6 +121,7 @@
 			<artifactId>languagetool-core</artifactId>
 			<version>3.3</version>
 		</dependency>
+
 
 	</dependencies>
 
