--- a/pom.xml
+++ b/pom.xml
@@ -103,37 +103,26 @@
 			<artifactId>cogroo-ann-pt_br</artifactId>
 			<version>4.0.0</version>
 		</dependency>
-		<dependency>
-			<groupId>org.cogroo.lang.pt_br</groupId>
-			<artifactId>cogroo-gc-pt_br</artifactId>
-			<version>4.0.0</version>
-		</dependency>
 
-		<dependency>
+		<!-- <dependency>
 			<groupId>org.cogroo</groupId>
 			<artifactId>cogroo-nlp</artifactId>
 			<version>4.0.0</version>
-		</dependency> 
-
+		</dependency>
+ -->
 
 		<!-- https://mvnrepository.com/artifact/org.languagetool/language-all -->
 		<dependency>
 			<groupId>org.languagetool</groupId>
 			<artifactId>language-all</artifactId>
-			<version>3.4</version>
+			<version>3.3</version>
 		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/org.languagetool/languagetool-core -->
 		<dependency>
 			<groupId>org.languagetool</groupId>
 			<artifactId>languagetool-core</artifactId>
-			<version>3.4</version>
-		</dependency>
-		<!-- https://mvnrepository.com/artifact/org.languagetool/language-pt -->
-		<dependency>
-			<groupId>org.languagetool</groupId>
-			<artifactId>language-pt</artifactId>
-			<version>3.4</version>
+			<version>3.3</version>
 		</dependency>
 
 
