--- a/pom.xml
+++ b/pom.xml
@@ -95,34 +95,28 @@
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpclient</artifactId>
 			<version>4.5.2</version>
-			<!-- API PLN Gramatical COgroo -->
 		</dependency>
-
 		<dependency>
 			<groupId>org.cogroo.lang.pt_br</groupId>
 			<artifactId>cogroo-ann-pt_br</artifactId>
 			<version>4.0.0</version>
 		</dependency>
-
-		<!-- <dependency>
-			<groupId>org.cogroo</groupId>
-			<artifactId>cogroo-nlp</artifactId>
+		<dependency>
+			<groupId>org.cogroo.lang.pt_br</groupId>
+			<artifactId>cogroo-gc-pt_br</artifactId>
 			<version>4.0.0</version>
 		</dependency>
- -->
 
-		<!-- https://mvnrepository.com/artifact/org.languagetool/language-all -->
 		<dependency>
 			<groupId>org.languagetool</groupId>
 			<artifactId>language-all</artifactId>
-			<version>3.3</version>
+			<version>2.8</version>
 		</dependency>
 
-		<!-- https://mvnrepository.com/artifact/org.languagetool/languagetool-core -->
 		<dependency>
 			<groupId>org.languagetool</groupId>
 			<artifactId>languagetool-core</artifactId>
-			<version>3.3</version>
+			<version>2.8</version>
 		</dependency>
 
 
